# twitter-clone

./: .gitignore  Dockerfile  Readme.md  consumer.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
app/: cache.py  database.py  main.py  models.py  producer.py  schemas.py  security.py
app/routers/: tweets.py  users.py
app/static/css/: style.css
app/templates/: base.html  home.html  login.html  profile.html  signup.html  users_list.html
